[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Extra assets/DIE.webm" type="VideoStream" id=3]
[ext_resource path="res://Extra assets/its-boshy-time.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = -67.0
margin_top = -37.0
margin_right = 1096.0
margin_bottom = 402.0
rect_scale = Vector2( 1.5, 1.5 )
stream = ExtResource( 3 )
autoplay = true

[node name="PlayAgain" type="Button" parent="."]
margin_left = 254.0
margin_top = 423.0
margin_right = 514.0
margin_bottom = 443.0
rect_scale = Vector2( 2, 2 )
focus_neighbour_top = NodePath("../Exit")
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 1 )
text = "Play again"
flat = true

[node name="Exit" type="Button" parent="."]
margin_left = 250.0
margin_top = 469.0
margin_right = 510.0
margin_bottom = 489.0
rect_scale = Vector2( 2, 2 )
focus_neighbour_bottom = NodePath("../PlayAgain")
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
text = "Exit"
flat = true

[node name="You_died" type="Label" parent="."]
margin_left = 424.0
margin_top = 75.0
margin_right = 769.0
margin_bottom = 236.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 3 )
text = "You died."

[node name="TotalKills" type="Label" parent="."]
margin_left = 442.0
margin_top = 152.0
margin_right = 567.0
margin_bottom = 210.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 6 )

[node name="TotalTime" type="Label" parent="."]
margin_left = 442.0
margin_top = 188.0
margin_right = 567.0
margin_bottom = 246.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 7 )

[node name="Highscore" type="Label" parent="."]
margin_left = 442.0
margin_top = 223.0
margin_right = 567.0
margin_bottom = 281.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 8 )

[node name="HighscoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
